--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/core": "^11.1.5",
+    "@nestjs/platform-express": "^11.1.5",
     "@nestjs/schedule": "4.0.0",
-    "@nestjs/swagger": "7.2.0",
+    "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "10.0.1",
     "axios": "1.8.2",
     "pg": "8.11.3",
@@ -37,7 +37,7 @@
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/testing": "^11.1.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
